fix(architecture): address canonical model review